--- a/front-end/app/components/invoice/styles.css
+++ b/front-end/app/components/invoice/styles.css
@@ -5,3 +5,14 @@
 .heading{
 	font-family:Georgia;
 }
+.textboxSize {
+  width: 200px;
+  height: 35px;
+  border-radius: 6px;
+}
+
+.textAreaSize1 {
+  width: 300px;
+  height: 50px;
+  border-radius: 6px;
+}
