--- a/front-end/app/components/invoice/styles.css
+++ b/front-end/app/components/invoice/styles.css
@@ -16,6 +16,7 @@
 	width: 300px;
 	height: 50px;
 	border-radius: 6px;
+	margin-left: 15px;
 }
 
 .errFontStyle {
@@ -64,3 +65,6 @@
 	padding-left: 1029px;
 }
 
+.marginRight {
+	margin-right: 60px;
+}
